# xserver-xsdl

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  COPYING  ChangeLog  Changelog  Makefile.am  README  acinclude.m4  autogen.sh  configure-xsdl.sh  configure.ac  cpprules.in  devbook.am  docbook.am  manpages.am  meson.build  meson_options.txt  shave-libtool.in  shave.in  start.sh  xorg-server.pc.in  xsdl-test-device.sh
GL/: Makefile.am  symlink-mesa.sh
XTrap/: Makefile.am  xtrapddmi.c  xtrapdi.c  xtrapdiswp.c  xtrapditbl.c
Xext/: EVI.c  EVIstruct.h  Makefile.am  SecurityPolicy  XSELinuxConfig  appgroup.c  appgroup.h  bigreq.c  cup.c  dpms.c  dpmsproc.h  dpmsstubs.c  fontcache.c  geext.c  geext.h  geint.h  hashtable.c  hashtable.h  mbuf.c  mbufbf.c  mbufpx.c  mitmisc.c  panoramiX.c  panoramiX.h  panoramiXSwap.c  panoramiXh.h  panoramiXprocs.c  panoramiXsrv.h  sampleEVI.c  saver.c  security.c  securitysrv.h  shape.c  shm.c  shmint.h  sleepuntil.c  sleepuntil.h  sync.c  syncsrv.h  vidmode.c  (+25 more)
Xi/: Makefile.am  allowev.c  allowev.h  chaccess.c  chaccess.h  chdevcur.c  chdevcur.h  chdevhier.c  chdevhier.h  chgdctl.c  chgdctl.h  chgfctl.c  chgfctl.h  chgkbd.c  chgkbd.h  chgkmap.c  chgkmap.h  chgprop.c  chgprop.h  chgptr.c  chgptr.h  chpkpair.c  chpkpair.h  closedev.c  closedev.h  devbell.c  devbell.h  exevents.c  exglobals.h  extgrbdev.c  extgrbdev.h  extinit.c  fakedevdata.c  fakedevdata.h  getbmap.c  getbmap.h  getcptr.c  getcptr.h  getdctl.c  getdctl.h  (+91 more)
Xprint/: AttrValid.c  AttrValid.h  DiPrint.h  Init.c  Makefile.am  Oid.c  Oid.h  OidDefs.h  OidStrs.h  Util.c  ValTree.c  attributes.c  attributes.h  ddxInit.c  mediaSizes.c  spooler.c  spooler.h
cfb/: Makefile.am  Makefile.am.inc  cfb.h  cfb16.h  cfb24.h  cfb32.h  cfb8bit.c  cfb8bit.h  cfb8line.c  cfballpriv.c  cfbbitblt.c  cfbblt.c  cfbbres.c  cfbbresd.c  cfbbstore.c  cfbcmap.c  cfbcppl.c  cfbfillarc.c  cfbfillrct.c  cfbfillsp.c  cfbgc.c  cfbgetsp.c  cfbglblt8.c  cfbhrzvert.c  cfbigblt8.c  cfbimage.c  cfbline.c  cfbmap.h  cfbmskbits.c  cfbmskbits.h  cfbpixmap.c  cfbply1rct.c  cfbpntwin.c  cfbpolypnt.c  cfbpush8.c  cfbrctstp8.c  cfbrrop.c  cfbrrop.h  cfbscrinit.c  cfbsetsp.c  (+12 more)
cfb16/: Makefile.am
cfb24/: Makefile.am  cfbrrop24.h
config/: Makefile.am  config-backends.h  config.c  dbus-api  dbus-core.c  dbus.c  hal.c  udev.c  x11-input.fdi
dbe/: Makefile.am  dbe.c  dbestruct.h  midbe.c  midbe.h  midbestr.h
dix/: .gitignore  Makefile.am  Xserver-dtrace.h.in  Xserver.d  access.c  atom.c  buildatoms  colormap.c  cursor.c  deprecated.c  devices.c  dispatch.c  dispatch.h  dixfonts.c  dixutils.c  enterleave.c  enterleave.h  eventconvert.c  events.c  extension.c  ffs.c  gc.c  getevents.c  globals.c  glyphcurs.c  grabs.c  initatoms.c  inpututils.c  main.c  pixmap.c  privates.c  property.c  protocol.txt  ptrveloc.c  region.c  registry.c  resource.c  selection.c  strcasecmp.c  stubmain.c  (+6 more)
doc/: .gitignore  Makefile.am  SecurityPolicy.man.pre  Xinput.xml  Xserver-spec.xml  Xserver.man.pre  c-extensions  smartsched
exa/: Makefile.am  exa.c  exa.h  exa_accel.c  exa_classic.c  exa_driver.c  exa_glyphs.c  exa_migration.c  exa_migration_classic.c  exa_migration_mixed.c  exa_mixed.c  exa_offscreen.c  exa_priv.h  exa_render.c  exa_unaccel.c
fb/: Makefile.am  fb.h  fb24_32.c  fb24_32.h  fballpriv.c  fbarc.c  fbbits.c  fbbits.h  fbblt.c  fbbltone.c  fbbstore.c  fbcmap.c  fbcmap_mi.c  fbcompose.c  fbcopy.c  fbedge.c  fbedgeimp.h  fbfill.c  fbfillrect.c  fbfillsp.c  fbgc.c  fbgetsp.c  fbglyph.c  fbimage.c  fbline.c  fbmmx.c  fbmmx.h  fboverlay.c  fboverlay.h  fbpict.c  fbpict.h  fbpixmap.c  fbpoint.c  fbpseudocolor.c  fbpseudocolor.h  fbpush.c  fbrop.h  fbscreen.c  fbseg.c  fbsetsp.c  (+8 more)
glamor/: Makefile.am  compiler.h  glamor.c  glamor.h  glamor_addtraps.c  glamor_composite_glyphs.c  glamor_compositerects.c  glamor_copy.c  glamor_copyarea.c  glamor_copyplane.c  glamor_copywindow.c  glamor_core.c  glamor_dash.c  glamor_debug.h  glamor_egl.c  glamor_egl.h  glamor_egl_stubs.c  glamor_eglmodule.c  glamor_fbo.c  glamor_fill.c  glamor_fillspans.c  glamor_font.c  glamor_getimage.c  glamor_getspans.c  glamor_gl_dispatch.c  glamor_gl_dispatch.h  glamor_glext.h  glamor_glx.c  glamor_glyphblt.c  glamor_glyphs.c  glamor_gradient.c  glamor_largepixmap.c  glamor_lines.c  glamor_picture.c  glamor_pixmap.c  glamor_pixmap.indent.c  glamor_points.c  glamor_polyfillrect.c  glamor_polylines.c  glamor_polyops.c  (+23 more)
ilbm/: Makefile.am  README  ilbm.h  ilbmbitblt.c  ilbmblt.c  ilbmbres.c  ilbmbresd.c  ilbmbstore.c  ilbmclip.c  ilbmcmap.c  ilbmfillarc.c  ilbmfillrct.c  ilbmfillsp.c  ilbmfont.c  ilbmgc.c  ilbmgetsp.c  ilbmhrzvert.c  ilbmimage.c  ilbmimggblt.c  ilbmline.c  ilbmmisc.c  ilbmpixmap.c  ilbmply1rct.c  ilbmplygblt.c  ilbmpntarea.c  ilbmpntwin.c  ilbmpolypnt.c  ilbmpushpxl.c  ilbmscrinit.c  ilbmsetsp.c  ilbmtegblt.c  ilbmtile.c  ilbmwindow.c  ilbmzerarc.c
iplan2p4/: Makefile.am  ipl.h  iplallpriv.c  iplbitblt.c  iplblt.c  iplbres.c  iplbresd.c  iplbstore.c  iplcmap.c  iplfillarc.c  iplfillrct.c  iplfillsp.c  iplgc.c  iplgetsp.c  iplhrzvert.c  iplimage.c  iplline.c  iplmap.h  iplmergerop.h  iplmskbits.c  iplmskbits.h  iplpack.c  iplpack.h  iplpixmap.c  iplply1rct.c  iplpntwin.c  iplpolypnt.c  iplrrop.c  iplrrop.h  iplscrinit.c  iplsetsp.c  iplsolid.c  ipltegblt.c  ipltile32.c  ipltileodd.c  iplwindow.c
lbx/: Makefile.am  lbxcmap.c  lbxdata.h  lbxdix.c  lbxexts.c  lbxgfx.c  lbxmain.c  lbxopts.c  lbxprop.c  lbxserve.h  lbxsquish.c  lbxsrvopts.h  lbxswap.c  lbxtables.c  lbxtags.c  lbxtags.h  lbxzerorep.c
mpx/: Makefile.am  extinit.c  getevbase.c  getevbase.h  getvers.c  getvers.h  listdev.c  listdev.h  mpxglobals.h  queryptr.c  queryptr.h  selectev.c  selectev.h
os/: .gitignore  Makefile.am  WaitFor.c  access.c  auth.c  backtrace.c  busfault.c  client.c  connection.c  inputthread.c  io.c  k5auth.c  lbxio.c  log.c  meson.build  mitauth.c  oscolor.c  osdep.h  osinit.c  ospoll.c  rpcauth.c  secauth.c  strcasecmp.c  strcasestr.c  strlcat.c  strlcpy.c  timingsafe_memcmp.c  utils.c  xalloc.c  xdmauth.c  xdmcp.c  xprintf.c  xsha1.c  xstrans.c
(+2782 files in other folders)
